--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,14 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+
+
+
 steps:
+- task: UseDotNet@2
+  inputs:
+    version: '5.0.x'
+    includePreviewVersions: true # Required for preview versions
 - task: DotNetCoreCLI@2
   inputs:
     command: test
